crates/quarto-math/tests/integration/snapshots/integration__normalize__ast__operators__sum-limits.snap
---
source: crates/quarto-math/tests/integration/normalize.rs
expression: rendered(&n)
---
row @0..16
  scripts Auto @0..14
    nary "∑" Auto @0..4
    sub:
      row @5..10
        run "i=1" @6..9
    sup:
      row @11..14
        run "n" @12..13
  run "i" @15..16
-- problems --
